<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hindaja</string>

    <string name="action_settings">Settings</string>

    
    <string name="punne_textview">Points</string>
    <string name="punne_edittext">0</string>
    
    <string name="punne_max_textview">Maxpoints</string>
   <string name="punne_max_edittext">0</string>
   
    <string name="protsent_textview">%</string>
    <string name="protsent_tulmeus_textview">0</string>    
        
    <string name="hinne_textview">Grade</string>
    <string name="hinnetulemus_textview"> </string>
    
    
    
    <string name="hindedLabel">Grades</string>
    <string name="hindedEditText">A</string>
<string name="keskmineTLabel">Average</string>
<string name="keskmineTTextview">A</string>
<string name="puhasta">Clear</string>
<string name="max_punkte">Max points</string>
<string name="_0">0</string>
<string name="punkte">Points</string>
<string name="hinne">Grade</string>
<string name="_">%</string>
<string name="sisesta_hinded">insert grades</string>
    <string name="Hinded">Average</string>
    <string name="Hinne">Grade</string>
    <string name="error_toast">Something went wrong!</string>
    <string name="veateade">Error!</string>
    <string name="a_value">A</string>
    <string name="a_value_protsent">A value %</string>
    <string name="a_alampiir">insert grade A minimum percent</string>
    <string name="b_value">B</string>
    <string name="b_value_protsent">B value %</string>
    <string name="b_alampiir">insert grade B minimum percent</string>
    <string name="c_value">C </string>
    <string name="d_value">D </string>
    <string name="e_value">E </string>
    <string name="c_value_protsent">C value %</string>
    <string name="d_value_protsent">D value %</string>
    <string name="e_value_protsent">E value %</string>
    <string name="c_alampiir">insert  C grade  minimum percent</string>
    <string name="d_alampiir">insert   grade E  minimum percent</string>
    <string name="e_alampiir">insert  grade E  minimum percent</string>
    <string name="action_about">About</string>


</resources>
